# hardeneks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  tox.ini
.github/workflows/: bumpversion.yml  ci.yaml  pythonpublish.yaml
docs/: harden.html  index.html  report.html  resources.html
docs/cluster_wide/reliability/: applications.html  index.html
docs/cluster_wide/security/: detective_controls.html  encryption_secrets.html  iam.html  image_security.html  infrastructure_security.html  multi_tenancy.html  network_security.html  pod_security.html
docs/html/hardeneks/: index.html
docs/namespace_based/: index.html
docs/namespace_based/reliability/: applications.html
docs/namespace_based/security/: encryption_secrets.html  iam.html  index.html  network_security.html  pod_security.html  runtime_security.html
hardeneks/: __init__.py  config.yaml  harden.py  helper_functions.py  helpers.py  masking.py  report.py  resources.py  rules.py
hardeneks/cluster_wide/: detective_controls.py  encryption_secrets.py  iam.py  infrastructure_security.py  multi_tenancy.py  network_security.py
hardeneks/cluster_wide/cluster-autoscaling/: cluster-autoscaler.py
hardeneks/cluster_wide/cluster_autoscaling/: cluster_autoscaler.py
hardeneks/cluster_wide/networking/: load-balancing.py  prefix_mode.py  vpc-cni.py  vpc_subnets.py
hardeneks/cluster_wide/reliability/: applications.py
hardeneks/cluster_wide/scalability/: control_plane.py  skipped.json
hardeneks/cluster_wide/security/: detective_controls.py  encryption_secrets.py  iam.py  image_security.py  infrastructure_security.py  multi_tenancy.py  network_security.py  pod_security.py
hardeneks/namespace_based/networking/: load-balancing.py
hardeneks/namespace_based/reliability/: applications.py
hardeneks/namespace_based/security/: encryption_secrets.py  iam.py  network_security.py  pod_security.py  runtime_security.py
hardeneks/security/: detective_controls.py  iam.py  multi_tenancy.py  network_security.py  pod_security.py
scripts/: create_k8s_test_data.sh
tests/: conftest.py  test_cli.py  test_cluster_autoscaling_cluster_autoscaler.py  test_masking.py  test_reliability_applications.py  test_scalability_control_plane.py  test_security_detective_controls.py  test_security_encryption_secrets.py  test_security_iam.py  test_security_image_security.py  test_security_infrastructure_security.py  test_security_multi_tenancy.py  test_security_network_security.py  test_security_pod_security.py  test_security_runtime_security.py
tests/data/avoid_running_singleton_pods/: good.yaml
tests/data/check_access_to_instance_profile/: instance_metadata.json
tests/data/check_any_cluster_autoscaler_exists/: bad.yaml
tests/data/check_aws_node_daemonset_service_account/: daemon_sets_api_response.json  serviceaccount_api_response.json
tests/data/check_awspca_exists/: bad.yaml
tests/data/check_default_deny_policy_exists/: bad.yaml  good.yaml
tests/data/check_horizontal_pod_autoscaling_exists/: bad.yaml  good.yaml
tests/data/check_liveness_probes/: bad.yaml  good.yaml
tests/data/check_logs_are_enabled/: cluster_metadata.json
(+205 files in other folders)
