[tool.poetry]
name = "hardeneks"
version = "0.9.4"
description = ""
authors = ["Doruk Ozturk <dozturk@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.6.1"}
kubernetes = "^25.3.0"
boto3 = "^1.26.2"
pre-commit = "^2.20.0"
tox-gh-actions = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-datadir = "^1.4.1"
tox = "^4.1.2"

[tool.poetry.scripts]
hardeneks = "hardeneks:app"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.4"
version_files = [
  "pyproject.toml:[tool.commitizen]\nversion",
  "pyproject.toml:[tool.poetry]\nname = \"commitizen\"\nversion",
  "pyproject.toml:^version"
]
tag_format = "v$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

